--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Dependencies
 node_modules/
 */node_modules/
+node_modules/
+*/node_modules/
+build/
+dist/
+*/build/
+*/dist/
 
 # Environment variables
 .env
